unpackaged/objects/CalEPA_Matching__c.object
<CustomObject>
    <fields>
        <fullName>False_Positive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>False Positive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_1_Link__c</fullName>
        <formula>HYPERLINK(&apos;/lightning/r/&apos;&amp;   Record_1__c    &amp; &apos;/view&apos;  , &apos;View&apos; , &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record 1 Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_1_Name__c</fullName>
        <label>Record 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_1__c</fullName>
        <label>Record 1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_2_Link__c</fullName>
        <formula>HYPERLINK(&apos;/lightning/r/&apos;&amp;   Record_2__c    &amp; &apos;/view&apos;  , &apos;View&apos; , &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record 2 Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_2_Name__c</fullName>
        <label>Record 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_2__c</fullName>
        <label>Record 2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Set__c</fullName>
        <label>Set</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>CalEPA Matching</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>CalEPA Matching Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CalEPA Matchings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>